Blender 2.80 won't open. #51721

Closed
opened 2017-06-05 21:33:48 +02:00 by Ferencz Istvan · 38 comments

System Information
Windows 7, Nvidia GeForce 8400 GS, 4 GB RAM.

Blender Version
Broken: -
Worked: -

Blender 2.80 won't open.

When I open "blender.exe" console flashes on launching, then closes.

**System Information** Windows 7, Nvidia GeForce 8400 GS, 4 GB RAM. **Blender Version** Broken: - Worked: - **Blender 2.80 won't open.** **When I open "blender.exe" console flashes on launching, then closes.**
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @20Hertz

Added subscriber: @20Hertz

#51933 was marked as duplicate of this issue

#51933 was marked as duplicate of this issue

#51848 was marked as duplicate of this issue

#51848 was marked as duplicate of this issue
Member

Added subscribers: @MikeErwin, @LazyDodo

Added subscribers: @MikeErwin, @LazyDodo
Member

Your gpu is too old, and doesn't support the minimum opengl version required for blender 2.8,

That being said @MikeErwin the popup informing users about this no longer seems to show? (Tested my self, just shows a bunch of errors in the console, then crashes)

k:\BlenderGit\b28_2017\bin\Release>blender.exe
AL lib: (EE) ALCmmdevPlayback_open: Device init failed: 0x80070490
Warning! Using result of ChoosePixelFormat.
Warning! Using result of ChoosePixelFormat.
Win32 Error# (3221684230): <no system message>
Warning! Using result of ChoosePixelFormat.
Warning! Using result of ChoosePixelFormat.
Win32 Error# (3221684230): <no system message>
Warning! Using result of ChoosePixelFormat.
Warning! Using result of ChoosePixelFormat.
Win32 Error# (3221684230): <no system message>
Warning! Using result of ChoosePixelFormat.
Warning! Using result of ChoosePixelFormat.
Win32 Error# (3221684230): <no system message>
Warning! Using result of ChoosePixelFormat.
Warning! Using result of ChoosePixelFormat.
Win32 Error# (3221684230): <no system message>
Warning! Using result of ChoosePixelFormat.
Warning! Using result of ChoosePixelFormat.
Win32 Error# (3221684230): <no system message>
Warning! Using result of ChoosePixelFormat.
Warning! Using result of ChoosePixelFormat.
Win32 Error# (3221684230): <no system message>
Error: EXCEPTION_ACCESS_VIOLATION
Your gpu is too old, and doesn't support the minimum opengl version required for blender 2.8, That being said @MikeErwin the popup informing users about this no longer seems to show? (Tested my self, just shows a bunch of errors in the console, then crashes) ``` k:\BlenderGit\b28_2017\bin\Release>blender.exe AL lib: (EE) ALCmmdevPlayback_open: Device init failed: 0x80070490 Warning! Using result of ChoosePixelFormat. Warning! Using result of ChoosePixelFormat. Win32 Error# (3221684230): <no system message> Warning! Using result of ChoosePixelFormat. Warning! Using result of ChoosePixelFormat. Win32 Error# (3221684230): <no system message> Warning! Using result of ChoosePixelFormat. Warning! Using result of ChoosePixelFormat. Win32 Error# (3221684230): <no system message> Warning! Using result of ChoosePixelFormat. Warning! Using result of ChoosePixelFormat. Win32 Error# (3221684230): <no system message> Warning! Using result of ChoosePixelFormat. Warning! Using result of ChoosePixelFormat. Win32 Error# (3221684230): <no system message> Warning! Using result of ChoosePixelFormat. Warning! Using result of ChoosePixelFormat. Win32 Error# (3221684230): <no system message> Warning! Using result of ChoosePixelFormat. Warning! Using result of ChoosePixelFormat. Win32 Error# (3221684230): <no system message> Error: EXCEPTION_ACCESS_VIOLATION ```
Member

@MikeErwin , looked a little further into this, it's an icky problem, and we need to find a different way to scan for the opengl context we want to work with.

We call GHOST_ContextWGL::initializeDrawingContext() with a bunch of opengl verisons, to see if we can find one that sticks,
however every time we call initializeDrawingContext we call SetPixelFormat, which has a fun quirk : for any given HDC, you may only call SetPixelFormat ONCE any future calls for the same HDC will fail.

so yeah for this to work, we probably need to create some dummy windows to determine the version, and once we know what we have pass our actual window handle to initializeDrawingContext

@MikeErwin , looked a little further into this, it's an icky problem, and we need to find a different way to scan for the opengl context we want to work with. We call GHOST_ContextWGL::initializeDrawingContext() with a bunch of opengl verisons, to see if we can find one that sticks, however every time we call initializeDrawingContext we call SetPixelFormat, which has a fun quirk : for any given HDC, you may only call SetPixelFormat *ONCE* any future calls for the same HDC will fail. so yeah for this to work, we probably need to create some dummy windows to determine the version, and once we know what we have pass our actual window handle to initializeDrawingContext
Member

The Geforce 8000 series are the oldest GPUs from NVIDIA that support OpenGL 3.3. I recently got an 8600 for compatibility testing. Windows 10 did not recognize it but I can try Windows 7 (otherwise the card might just be bad).

Thanks for the new information @LazyDodo, I did not know that about SetPixelFormat. We could scan for the best GL version at startup, remember it for future context/window creation. Or simply take SetPixelFormat out of the GL version loop.

The Geforce 8000 series are the oldest GPUs from NVIDIA that support OpenGL 3.3. I recently got an 8600 for compatibility testing. Windows 10 did not recognize it but I can try Windows 7 (otherwise the card might just be bad). Thanks for the new information @LazyDodo, I did not know that about SetPixelFormat. We could scan for the best GL version at startup, remember it for future context/window creation. Or simply take SetPixelFormat out of the GL version loop.
Member

Might be less icky than expected, this patch solves the issue, but needs some massive cleanup, (i pretty much copied clone_window from a different file... needs to be solved better)

Seems like a bunch of functionality from GHOST_ContextWGL.cpp is slowly migrating to GHOST_WindowWin32.cpp , we probably need to pick a place where this needs to happen and stick with it.

ogltest.diff

Might be less icky than expected, this patch solves the issue, but needs some massive cleanup, (i pretty much copied clone_window from a different file... needs to be solved better) Seems like a bunch of functionality from GHOST_ContextWGL.cpp is slowly migrating to GHOST_WindowWin32.cpp , we probably need to pick a place where this needs to happen and stick with it. [ogltest.diff](https://archive.blender.org/developer/F621496/ogltest.diff)
Mike Erwin was assigned by Sergey Sharybin 2017-06-09 10:58:27 +02:00

Added subscribers: @Sergey, @dfelinto

Added subscribers: @Sergey, @dfelinto
Author

It's possible to install/move eevee rendering engine from 2.8 Blender to another Blender version? ex: Blender 2.78c

It's possible to install/move eevee rendering engine from 2.8 Blender to another Blender version? ex: Blender 2.78c
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

No, the new feature in eevee are what require the update to OpenGL 3.3

No, the new feature in eevee are what require the update to OpenGL 3.3
Member

Added subscribers: @AlexDoso, @Vladimir-21

Added subscribers: @AlexDoso, @Vladimir-21
Member

@MikeErwin poke, can we give this somewhat of a priority? currently blender 2.8 will only start on windows with cards with ogl 4.5 , seems a little steep.....

@MikeErwin poke, can we give this somewhat of a priority? currently blender 2.8 will only start on windows with cards with ogl 4.5 , seems a little steep.....
Member

In #51721#441365, @LazyDodo wrote:
@MikeErwin poke, can we give this somewhat of a priority? currently blender 2.8 will only start on windows with cards with ogl 4.5 , seems a little steep.....

Yes, will work on this ASAP. I have some GL 3.3 cards for testing.

> In #51721#441365, @LazyDodo wrote: > @MikeErwin poke, can we give this somewhat of a priority? currently blender 2.8 will only start on windows with cards with ogl 4.5 , seems a little steep..... Yes, will work on this ASAP. I have some GL 3.3 cards for testing.

Added subscriber: @TheCharacterhero-4

Added subscriber: @TheCharacterhero-4

Windows 7, 5Gb Ram, Nvidia GT 9800GT 512 Mb

Blender 2.8 not working (blender-2.80.0-git.bff98ce-windows32)

Is it time to change the video card ???

Win32 Error# (3221692565): <no system message>
Win32 Error# (3221684237): <no system message>
Win32 Error# (3221684237): <no system message>
Win32 Error# (3221684237): <no system message>
Win32 Error# (3221684237): <no system message>
Win32 Error# (3221684237): <no system message>
Windows 7, 5Gb Ram, Nvidia GT 9800GT 512 Mb Blender 2.8 not working (blender-2.80.0-git.bff98ce-windows32) Is it time to change the video card ??? ``` Win32 Error# (3221692565): <no system message> Win32 Error# (3221684237): <no system message> Win32 Error# (3221684237): <no system message> Win32 Error# (3221684237): <no system message> Win32 Error# (3221684237): <no system message> Win32 Error# (3221684237): <no system message> ```
Member

That's an opengl 2.1 card , so yes,

That's an [opengl 2.1 card ](https://www.geforce.com/hardware/desktop-gpus/geforce-9800gt/specifications), so yes,

Added subscriber: @brecht

Added subscriber: @brecht

@LazyDodo, those specifications are the OpenGL version supported at release. But later driver updates can change that, and checking a database like http://opengl.gpuinfo.org/ shows that this card does support OpenGL 3.3.

@LazyDodo, those specifications are the OpenGL version supported at release. But later driver updates can change that, and checking a database like http://opengl.gpuinfo.org/ shows that this card does support OpenGL 3.3.
Member

Yeah this bug has dragged on long enough, I'll see if i can get my patch in an acceptable state this weekend, so we no longer have to guess why a card is failing

Yeah this bug has dragged on long enough, I'll see if i can get my patch in an acceptable state this weekend, so we no longer have to guess why a card is failing

In #51721#442170, @brecht wrote:
@LazyDodo, those specifications are the OpenGL version supported at release. But later driver updates can change that, and checking a database like http://opengl.gpuinfo.org/ shows that this card does support OpenGL 3.3.

OpenGL 3.3 is supported, but the release date of the video card is 2008 year (I learned using the program TechPowerUp GPU-Z). Driver version 342. 01

> In #51721#442170, @brecht wrote: > @LazyDodo, those specifications are the OpenGL version supported at release. But later driver updates can change that, and checking a database like http://opengl.gpuinfo.org/ shows that this card does support OpenGL 3.3. OpenGL 3.3 is supported, but the release date of the video card is 2008 year (I learned using the program TechPowerUp GPU-Z). Driver version 342. 01
Member

Added subscriber: @LittleNekoTerra

Added subscriber: @LittleNekoTerra

so in other words im never gonna see the future of blender? sounds about right...

so in other words im never gonna see the future of blender? sounds about right...
Member

Currently blender refuses to open unless you have opengl 4.5, when this is fixed, the minimum will be back to 3.3, if you card supports that, it'll work, if not it'll inform you about the problem instead of blowing up in your face. if you want to know right now if your card will be supported, check with GPU-Z like @TheCharacterhero-4 did and make sure it has atleast opengl 3.3

Currently blender refuses to open unless you have opengl 4.5, when this is fixed, the minimum will be back to 3.3, if you card supports that, it'll work, if not it'll inform you about the problem instead of blowing up in your face. if you want to know right now if your card will be supported, check with GPU-Z like @TheCharacterhero-4 did and make sure it has atleast opengl 3.3

This issue was referenced by b43cdc91ce

This issue was referenced by b43cdc91ce4188e2fc18ff6646781ff03fbfd693

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @stefanoaq

Added subscriber: @stefanoaq

How many people are still stuck with this problem? I also have a Nvidia card that supports OpenGL 3.3 and I can't start Blender 2.80.
I download the nightly builds everyday to try, but it's always crashing after run.
This bug is marked like resolved, but it's not. And 2.80 is going to be a beta release soon!

How many people are still stuck with this problem? I also have a Nvidia card that supports OpenGL 3.3 and I can't start Blender 2.80. I download the nightly builds everyday to try, but it's always crashing after run. This bug is marked like resolved, but it's not. And 2.80 is going to be a beta release soon!
Member

The bug that caused opengl to be forced to 4.5 is without a doubt fixed and resolved (Ie i can run 2.8 on windows with mesa that only does ogl 3.3) however there may be other bugs, we are aware of many issues in 2.8 and actively working to fix them. But since replying to reports takes time, we have decided to limit bug reports to module team members.

The bug that caused opengl to be forced to 4.5 is without a doubt fixed and resolved (Ie i can run 2.8 on windows with mesa that only does ogl 3.3) however there may be other bugs, we are aware of many issues in 2.8 and actively working to fix them. But since replying to reports takes time, we have decided to limit bug reports to [module team ](https://wiki.blender.org/index.php/Dev:Doc/Process/Module_Owners/List) members.

In #51721#490572, @LazyDodo wrote:
The bug that caused opengl to be forced to 4.5 is without a doubt fixed and resolved (Ie i can run 2.8 on windows with mesa that only does ogl 3.3) however there may be other bugs, we are aware of many issues in 2.8 and actively working to fix them. But since replying to reports takes time, we have decided to limit bug reports to module team members.

I don't agree. The bug's description says: "Blender 2.80 won't open. When I open "blender.exe" console flashes on launching, then closes.".
This is exactly what's happening to me. I'm simply reporting this bug to the developer community. It's not fixed and resolved.

> In #51721#490572, @LazyDodo wrote: > The bug that caused opengl to be forced to 4.5 is without a doubt fixed and resolved (Ie i can run 2.8 on windows with mesa that only does ogl 3.3) however there may be other bugs, we are aware of many issues in 2.8 and actively working to fix them. But since replying to reports takes time, we have decided to limit bug reports to [module team ](https://wiki.blender.org/index.php/Dev:Doc/Process/Module_Owners/List) members. I don't agree. The bug's description says: "Blender 2.80 won't open. When I open "blender.exe" console flashes on launching, then closes.". This is exactly what's happening to me. I'm simply reporting this bug to the developer community. It's not fixed and resolved.
Member

agree to disagree then i suppose? I'm not doubting that you are having issues with starting blender 2.8, however the bug that was the root cause for this (9 month old!!) ticket has been fixed, there's many others bugs currently in 2.8 and we're working hard to fix those. Just to clarify

  1. We are aware 2.8 has many bugs , and it's under heavy development, so new bugs come and go on a daily basis
  2. Responding to X tickets a day telling us something is broken while we already know it's broken, takes time, time better spend on actual development.
  3. That's why the tracker policy currently is not to allow any 2.8 tickets (and that includes re-opening old 2.8 tickets) from non team members.

naturally this policy will change once 2.8 gets in a more stable form, but for now these are the rules.

agree to disagree then i suppose? I'm not doubting that you are having issues with starting blender 2.8, however the bug that was the root cause for this (9 month old!!) ticket has been fixed, there's many others bugs currently in 2.8 and we're working hard to fix those. Just to clarify 1. We are aware 2.8 has many bugs , and it's under heavy development, so new bugs come and go on a daily basis 2. Responding to X tickets a day telling us something is broken while we already know it's broken, takes time, time better spend on actual development. 3. That's why the tracker policy currently is not to allow any 2.8 tickets (and that includes re-opening old 2.8 tickets) from non team members. naturally this policy will change once 2.8 gets in a more stable form, but for now these are the rules.

I was able to run Blender 2.80 on Linux Mint 18.3. Blender displays only panels without text: https://imgur.com/a/t1TZk
blender_error

I was able to run Blender 2.80 on Linux Mint 18.3. Blender displays only panels without text: [[ https://imgur.com/a/t1TZk ]] [blender_error](https://archive.blender.org/developer/F2560065/blender_error)
Member

I'm running out of ways to communicate that we're currently not taking any 2.8 bugs at this moment in time.

I'm running out of ways to communicate that we're currently not taking any 2.8 bugs at this moment in time.
Author

I've got a GeForce 210 months ago and I tried 2.80 (latest build) today and it's working fine. Opengl version: 3.3.0 (Checked with Everest software).

I've got a GeForce 210 months ago and I tried 2.80 (latest build) today and it's working fine. Opengl version: 3.3.0 (Checked with Everest software).

Added subscriber: @Johny_F

Added subscriber: @Johny_F

This comment was removed by @Johny_F

*This comment was removed by @Johny_F*
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
12 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51721
No description provided.