intern/ghost/intern/GHOST_WindowWin32.cpp
@@ -611,54 +611,48 @@ GHOST_TSuccess GHOST_WindowWin32::invalidate()
 GHOST_Context *GHOST_WindowWin32::newDrawingContext(GHOST_TDrawingContextType type)
 {
 	if (type == GHOST_kDrawingContextTypeOpenGL) {
-
-		// During development:
-		//   ask for 2.1 context, driver gives latest compatibility profile
-		//   (we check later to ensure it's >= 3.3 on Windows)
-		//
-		// Final Blender 2.8:
-		//   try 4.x core profile
-		//   try 3.3 core profile
-		//   no fallbacks
-
-		// TODO(merwin): query version of initial dummy context, request that + profile + debug
-
 		GHOST_Context *context;
 
 #if defined(WITH_GL_PROFILE_CORE)
-		// our minimum requirement is 3.3 core profile
-		// when we request a specific GL version:
-		//   - AMD and Intel give us exactly this version
-		//   - NVIDIA gives at least this version <-- desired behavior
-		// so we ask for 4.5, 4.4 ... 3.3 in descending order to get the best version on the user's system
-		for (int minor = 5; minor >= 0; --minor) {
+		GHOST_TUns8 major, minor;
+
+		if (GHOST_ContextWGL::getMaximumSupportedOpenGLVersion(
+		    m_hWnd,
+		    m_wantStereoVisual,
+		    m_wantAlphaBackground,
+		    m_wantNumOfAASamples,
+		    WGL_CONTEXT_CORE_PROFILE_BIT_ARB,
+		    m_debug_context,
+		    &major, &minor))
+		{
 			context = new GHOST_ContextWGL(
-			        m_wantStereoVisual,
-			        m_wantAlphaBackground,
-			        m_wantNumOfAASamples,
-			        m_hWnd,
-			        m_hDC,
-			        WGL_CONTEXT_CORE_PROFILE_BIT_ARB,
-			        4, minor,
-			        (m_debug_context ? WGL_CONTEXT_DEBUG_BIT_ARB : 0),
-			        GHOST_OPENGL_WGL_RESET_NOTIFICATION_STRATEGY);
+			    m_wantStereoVisual,
+			    m_wantAlphaBackground,
+			    m_wantNumOfAASamples,
+			    m_hWnd,
+			    m_hDC,
+			    WGL_CONTEXT_CORE_PROFILE_BIT_ARB,
+			    major, minor,
+			    (m_debug_context ? WGL_CONTEXT_DEBUG_BIT_ARB : 0),
+			    GHOST_OPENGL_WGL_RESET_NOTIFICATION_STRATEGY);
 
-			if (context->initializeDrawingContext())
+			if (context->initializeDrawingContext()) {
 				return context;
-			else
+			}
+			else {
 				delete context;
+			}
 		}
-
-		context = new GHOST_ContextWGL(
-		        m_wantStereoVisual,
-		        m_wantAlphaBackground,
-		        m_wantNumOfAASamples,
-		        m_hWnd,
-		        m_hDC,
-		        WGL_CONTEXT_CORE_PROFILE_BIT_ARB,
-		        3, 3,
-		        (m_debug_context ? WGL_CONTEXT_DEBUG_BIT_ARB : 0),
-		        GHOST_OPENGL_WGL_RESET_NOTIFICATION_STRATEGY);
+		else {
+			MessageBox(
+			        m_hWnd,
+			        "Blender requires a graphics driver with at least OpenGL 3.3 support.\n\n"
+			        "The program will now close.",
+			        "Blender - Unsupported Graphics Driver!",
+			        MB_OK | MB_ICONERROR);
+			exit(0);
+			return NULL;
+		}
 
 #elif defined(WITH_GL_PROFILE_COMPAT)
 		// ask for 2.1 context, driver gives any GL version >= 2.1 (hopefully the latest compatibility profile)
@@ -677,10 +671,12 @@ GHOST_Context *GHOST_WindowWin32::newDrawingContext(GHOST_TDrawingContextType ty
 #  error // must specify either core or compat at build time
 #endif
 
-		if (context->initializeDrawingContext())
+		if (context->initializeDrawingContext()) {
 			return context;
-		else
+		}
+		else {
 			delete context;
+		}
 	}
 
 	return NULL;
